# dev-templates

./: REFERENCE.md
base/: AGENTS.md  README.md  opencode.json
base/scripts/: lint.sh  run.sh  setup.sh  test.sh  validate.sh
layers/ai/.opencode/agents/: builder.md  planner.md  reviewer.md  task-expander.md
layers/ai/.opencode/commands/: build.md  expand.md  next.md  review.md
layers/ai/docs/: architecture.md  context.md  decisions.md  plan.md
layers/ai/scripts/: expand.sh  review.sh  run.sh
layers/cli/: pyproject.toml
layers/cli/app/: main.py
layers/cli/cmd/: main.py
layers/cli/scripts/: build.sh  run.sh  setup.sh  test.sh
layers/infra/: Makefile
layers/infra/scripts/: check.sh  format.sh  lint.sh
layers/web/scripts/: build.sh  dev.sh
presets/ai-cli/: preset.json
presets/ai-project/: preset.json
presets/ai-web/: preset.json
scripts/: newproj.sh
